syntax = "proto3";
package user;


service UserService {
    rpc CreateUser (CreateUserRequest) returns (User);
    rpc GetUser (GetUserRequest) returns (User);
}


message CreateUserRequest { string email = 1; string name = 2; }
message GetUserRequest { string id = 1; }


message User { string id = 1; string email = 2; string name = 3; }